--- a/charts/filebot/values.yaml
+++ b/charts/filebot/values.yaml
@@ -38,10 +38,15 @@ service:
 
 ingress:
   enabled: false
+  className: ""
   annotations: {}
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: example.com 
-      paths: [ /filebot ]
+    - host: chart-example.local
+      paths:
+        - path: /filebot
+          pathType: ImplementationSpecific
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
