--- a/charts/frontend/values.yaml
+++ b/charts/frontend/values.yaml
@@ -24,13 +24,23 @@ service:
   port: 80
 
 ingress:
-  enabled: true
-  annotations: {}  
+  enabled: false
+  className: ""
+  annotations: {}
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: example.com 
-      paths: [ / ]  
+    - host: chart-example.local
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
+  tls: []
+  #  - secretName: chart-example-tls
+  #    hosts:
+  #      - chart-example.local
 
-resources: 
+
+resources: {}
   # requests:
   #   cpu: 250m
   #   memory: 128Mi
