--- a/charts/tautulli/values.yaml
+++ b/charts/tautulli/values.yaml
@@ -42,18 +42,25 @@ service:
 
 ingress:
   enabled: false
+  className: ""
   annotations: {}
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: example.com
+    - host: chart-example.local
       paths:
-      - path: /
+        - path: /
+          pathType: ImplementationSpecific
   tls: []
+  #  - secretName: chart-example-tls
+  #    hosts:
+  #      - chart-example.local
 resources: 
   limits:
     cpu: 1000m
     memory: 512Mi
   requests:
-    cpu: 100m
+    cpu: 200m
     memory: 256Mi
 
 autoscaling:
