--- a/charts/filebot-executor/values.yaml
+++ b/charts/filebot-executor/values.yaml
@@ -7,6 +7,10 @@ image:
   pullPolicy: Always
   tag: "0.0.1-SNAPSHOT"
 
+paths:
+  output:
+  input:  
+
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
