--- a/charts/rclone/values.yaml
+++ b/charts/rclone/values.yaml
@@ -3,7 +3,8 @@
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
-
+data:
+  path: /mnt/downloads-pro-1/rclone
 image:
   repository: bitnami/rclone
   pullPolicy: IfNotPresent
@@ -38,23 +39,20 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  port: 80
+  port: 5572
 
 ingress:
-  enabled: false
-  className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+  enabled: true
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    external-dns.alpha.kubernetes.io/target: lavandadelpatio.es
+    nginx.ingress.kubernetes.io/auth-signin: "https://oauth2.lavandadelpatio.es/oauth2/start?rd=https://$host$request_uri$is_args$args"
+    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.oauth2-proxy.svc.cluster.local:80/oauth2/auth"
   hosts:
-    - host: chart-example.local
+    - host: rclone.lavandadelpatio.es
       paths:
         - path: /
           pathType: ImplementationSpecific
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
