--- a/charts/rclone/templates/deployment.yaml
+++ b/charts/rclone/templates/deployment.yaml
@@ -55,7 +55,7 @@ spec:
           volumeMounts:
             - mountPath: /data
               name: rclone-data    
-      {{- with .Values.nodeSelector }
+      {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
