--- a/charts/rclone/templates/deployment.yaml
+++ b/charts/rclone/templates/deployment.yaml
@@ -37,7 +37,7 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          command: ["rclone","rcd","--rc-web-gui","--rc-no-auth","--rc-addr=https://rclone.lavandadelpatio.es:443"]
+          command: ["rclone","rcd","--rc-web-gui","--rc-no-auth","--rc-addr=:5572"]
           ports:
             - name: http
               containerPort: 5572
