--- a/charts/rclone/values.yaml
+++ b/charts/rclone/values.yaml
@@ -3,8 +3,8 @@
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
-data:
-  path: /mnt/downloads-pro-1/rclone
+paths:
+  data: /mnt/downloads-pro-1/rclone
 image:
   repository: rclone/rclone
   pullPolicy: IfNotPresent
