--- a/charts/rclone/templates/deployment.yaml
+++ b/charts/rclone/templates/deployment.yaml
@@ -31,9 +31,9 @@ spec:
         - name: rclone-data
           hostPath:
             path: {{ .Values.paths.data }}   
-        - name: {{ include "rclone.fullname" . }}-config
+        - name: rclone-config
           persistentVolumeClaim:
-            claimName: {{ include "rclone.fullname" . }}-config    
+            claimName: rclone-config    
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
@@ -58,9 +58,8 @@ spec:
           volumeMounts:
             - mountPath: /data
               name: rclone-data 
-          volumeMounts:
             - mountPath: /config
-              name: {{ include "rclone.fullname" . }}-config       
+              name: rclone-config       
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
