--- a/charts/rclone/values.yaml
+++ b/charts/rclone/values.yaml
@@ -42,7 +42,7 @@ service:
   port: 5572
 
 ingress:
-  enabled: true
+  enabled: false
   annotations:
     kubernetes.io/ingress.class: nginx
     external-dns.alpha.kubernetes.io/target: lavandadelpatio.es
