--- a/charts/rclone/values.yaml
+++ b/charts/rclone/values.yaml
@@ -29,7 +29,11 @@ podAnnotations: {}
 podSecurityContext: {}
   # fsGroup: 2000
 
-securityContext: {}
+securityContext: 
+  privileged: true
+  capabilities:
+    add:
+    - SYS_ADMIN
   # capabilities:
   #   drop:
   #   - ALL
