--- a/charts/rclone/values.yaml
+++ b/charts/rclone/values.yaml
@@ -3,8 +3,41 @@
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
+
 paths:
   data: /mnt/gdrive
+command: 
+  - "rclone" 
+  - "mount gdrive-lavanda /data"
+  - "--allow-other"
+  - "--dir-cache-time 4h"
+  - "--drive-chunk-size 64M "
+  - "--umask 002"
+  - "--vfs-cache-max-age 24h"
+  - "--vfs-read-chunk-size 128M"
+  - "--vfs-read-chunk-size-limit off"
+  - "--vfs-cache-mode writes"
+  - "--vfs-cache-max-size 30G"
+  - "--cache-dir=/tmp/rclone"
+  - "--tpslimit=7 "
+
+
+# =rclone mount \
+#       gdrive-lavanda: /mnt/gdrive  \
+#       --allow-other  \
+#       --dir-cache-time 24h \
+#       --drive-chunk-size 64M \
+#       --umask 002  \
+#       --vfs-cache-max-age 24h  \
+#       --vfs-read-chunk-size 128M \
+#       --vfs-read-chunk-size-limit off \
+#       --vfs-cache-mode writes \
+#       --vfs-cache-max-size 100G \
+#       --cache-dir=/mnt/rclone \
+#       --log-file /opt/rclone/logs/rclone-mount.log \
+#       --log-level=INFO \
+#       --tpslimit=7 -c \
+
 image:
   repository: rclone/rclone
   pullPolicy: IfNotPresent
