--- a/charts/rclone/values.yaml
+++ b/charts/rclone/values.yaml
@@ -6,21 +6,22 @@ replicaCount: 1
 
 paths:
   data: /mnt/gdrive
-command: 
-  - "rclone" 
-  - "mount gdrive-lavanda /data"
-  - "--allow-other"
-  - "--dir-cache-time 4h"
-  - "--drive-chunk-size 64M "
-  - "--umask 002"
-  - "--vfs-cache-max-age 24h"
-  - "--vfs-read-chunk-size 128M"
-  - "--vfs-read-chunk-size-limit off"
-  - "--vfs-cache-mode writes"
-  - "--vfs-cache-max-size 30G"
-  - "--cache-dir=/tmp/rclone"
-  - "--tpslimit=7 "
-
+command:
+  [
+    "rclone",
+    "mount gdrive-lavanda /data",
+    "--allow-other",
+    "--dir-cache-time 4h",
+    "--drive-chunk-size 64M ",
+    "--umask 002",
+    "--vfs-cache-max-age 24h",
+    "--vfs-read-chunk-size 128M",
+    "--vfs-read-chunk-size-limit off",
+    "--vfs-cache-mode writes",
+    "--vfs-cache-max-size 30G",
+    "--cache-dir=/tmp/rclone",
+    "--tpslimit=7 ",
+  ]
 
 # =rclone mount \
 #       gdrive-lavanda: /mnt/gdrive  \
@@ -59,14 +60,15 @@ serviceAccount:
 
 podAnnotations: {}
 
-podSecurityContext: {}
+podSecurityContext:
+  {}
   # fsGroup: 2000
 
-securityContext: 
+securityContext:
   privileged: true
   capabilities:
     add:
-    - SYS_ADMIN
+      - SYS_ADMIN
   # capabilities:
   #   drop:
   #   - ALL
@@ -91,7 +93,8 @@ ingress:
         - path: /
           pathType: ImplementationSpecific
 
-resources: {}
+resources:
+  {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
