--- a/charts/rclone/values.yaml
+++ b/charts/rclone/values.yaml
@@ -6,24 +6,21 @@ replicaCount: 1
 
 paths:
   data: /mnt/gdrive
-command:
-  [
-    "rclone",
-    "mount gdrive-lavanda /data",
-    "--config=/config/rclone/rclone.conf",
-    "--allow-other",
-    "--allow-non-empty",
-    "--dir-cache-time 4h",
-    "--drive-chunk-size 64M ",
-    "--umask 002",
-    "--vfs-cache-max-age 24h",
-    "--vfs-read-chunk-size 128M",
-    "--vfs-read-chunk-size-limit off",
-    "--vfs-cache-mode writes",
-    "--vfs-cache-max-size 30G",
-    "--cache-dir=/tmp/rclone",
-    "--tpslimit=7 ",
-  ]
+args:
+    - "mount gdrive-lavanda: /data"
+    - "--config=/config/rclone/rclone.conf"
+    -  "--allow-other"
+    - "--allow-non-empty"
+    - "--dir-cache-time 4h"
+    - "--drive-chunk-size 64M"
+    - "--umask 002"
+    - "--vfs-cache-max-age 24h"
+    - "--vfs-read-chunk-size 128M"
+    - "--vfs-read-chunk-size-limit off"
+    - "--vfs-cache-mode writes"
+    - "--vfs-cache-max-size 30G"
+    - "--cache-dir=/tmp/rclone"
+    - "--tpslimit=7"
 image:
   repository: rclone/rclone
   pullPolicy: IfNotPresent
