--- a/charts/rclone/templates/daemonset.yaml
+++ b/charts/rclone/templates/daemonset.yaml
@@ -42,7 +42,7 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           args: 
           {{- with .Values.args }}
-             - {{- toYaml . | nindent 12 }}
+              {{- toYaml . | nindent 12 }}
           {{- end }}
           lifecycle:
             preStop:
