--- a/charts/rclone/templates/daemonset.yaml
+++ b/charts/rclone/templates/daemonset.yaml
@@ -40,7 +40,7 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          args: {{ .Values.args }}
+          args: "{{ .Values.args }}"
           lifecycle:
             preStop:
               exec:
