--- a/charts/rclone/values.yaml
+++ b/charts/rclone/values.yaml
@@ -6,24 +6,7 @@ replicaCount: 1
 
 paths:
   data: /mnt/gdrive
-args:
-  [
-    "mount",
-    "gdrive-lavanda: /data",
-    "--config=/config/rclone/rclone.conf",
-    "--allow-other",
-    "--allow-non-empty",
-    "--dir-cache-time 4h",
-    "--drive-chunk-size 64M",
-    "--umask 002",
-    "--vfs-cache-max-age 24h",
-    "--vfs-read-chunk-size 128M",
-    "--vfs-read-chunk-size-limit off",
-    "--vfs-cache-mode writes",
-    "--vfs-cache-max-size 30G",
-    "--cache-dir=/tmp/rclone",
-    "--tpslimit=7",
-  ]
+
 image:
   repository: rclone/rclone
   pullPolicy: IfNotPresent
@@ -79,17 +62,12 @@ ingress:
           pathType: ImplementationSpecific
 
 resources:
-  {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
+  limits:
+    cpu: 2000m
+    memory: 2048Mi
+  requests:
+    cpu: 400m
+    memory: 512Mi
 
 autoscaling:
   enabled: false
