--- a/charts/rclone/templates/daemonset.yaml
+++ b/charts/rclone/templates/daemonset.yaml
@@ -28,12 +28,14 @@ spec:
         - name: rclone-data
           hostPath:
             path: {{ .Values.paths.data }}   
-        - name: rclone-config
+        - name: config-data
           configMap:
             name: rclone-config
             items:
               - key: rclone.conf
                 path: rclone.conf
+        - name: config
+          emptyDir: {}        
       initContainers:
         - name: umount-previous-mount
           image: rclone/rclone
@@ -44,6 +46,19 @@ spec:
             - mountPath: /data
               mountPropagation: Bidirectional
               name: rclone-data   
+        - name: {{ .Chart.Name }}-config
+          image: "busybox"
+          command:
+            - cp
+          args:
+            - -v
+            - /in/rclone.conf
+            - /out/rclone.conf
+          volumeMounts:
+          - name: config-data
+            mountPath: /in
+          - name: config
+            mountPath: /out    
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
@@ -85,7 +100,8 @@ spec:
               mountPropagation: Bidirectional
               name: rclone-data 
             - mountPath: /config/rclone
-              name: rclone-config       
+              name: config
+                
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
