--- a/charts/sonarr/values.yaml
+++ b/charts/sonarr/values.yaml
@@ -35,13 +35,11 @@ podAnnotations: {}
 podSecurityContext: {}
   # fsGroup: 2000
 
-securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
+securityContext: 
+  privileged: true
+  capabilities:
+    add:
+      - SYS_ADMIN
 
 service:
   type: ClusterIP
