--- a/charts/filebot-executor/values.yaml
+++ b/charts/filebot-executor/values.yaml
@@ -8,8 +8,8 @@ image:
   tag: "0.0.1-SNAPSHOT"
 
 paths:
-  output:
-  input:  
+  media: /mnt/gdrive
+  torrents: /mnt/storagebox   
 
 imagePullSecrets: []
 nameOverride: ""
