New rclone config

--- a/charts/rclone/templates/daemonset.yaml
+++ b/charts/rclone/templates/daemonset.yaml
@@ -72,25 +72,35 @@ spec:
              "mount",
              "gdrive-lavanda:","/data",
              "--config=/config/rclone/rclone.conf",
-             "--log-level=DEBUG",
+             "--log-level=INFO",
              "--allow-other",
              "--allow-non-empty",
-             "--dir-cache-time", "4h",
              "--drive-chunk-size","64M",
              "--umask","002",
-             "--vfs-cache-max-age","24h",
-             "--vfs-read-chunk-size","128M",
-             "--vfs-read-chunk-size-limit", "off",
-             "--vfs-cache-mode","writes",
-             "--vfs-cache-max-size","2500G",
-             "--cache-dir=/cache/.rclone",
+             "--vfs-cache-mode","off", 
              "--tpslimit=7",
              "--bwlimit","8.5M:off",
-             "--max-transfer","740G",
-             "--drive-stop-on-upload-limit"
              ]
-          #  "--cache-dir=/tmp/rclone",
-          #  "--cache-dir=/mnt/rclone"
+            #  "--cache-dir=/tmp/rclone",
+            #  "--cache-dir=/mnt/rclone"
+            #  "--max-transfer","740G",
+            #  "mount",
+            #  "gdrive-lavanda:","/data",
+            #  "--config=/config/rclone/rclone.conf",
+            #  "--log-level=DEBUG",
+            #  "--allow-other",
+            #  "--allow-non-empty",
+            #  "--dir-cache-time", "4h",
+            #  "--drive-chunk-size","64M",
+            #  "--umask","002",
+            #  "--vfs-cache-max-age","24h",
+            #  "--vfs-read-chunk-size","128M",
+            #  "--vfs-read-chunk-size-limit", "off",
+            #  "--vfs-cache-mode","writes",
+            #  "--vfs-cache-max-size","2500G",
+            #  "--cache-dir=/cache/.rclone",
+            #  "--tpslimit=7",
+            #  "--bwlimit","8.5M:off",
           lifecycle:
             preStop:
               exec:
