--- a/charts/rclone/templates/daemonset.yaml
+++ b/charts/rclone/templates/daemonset.yaml
@@ -40,15 +40,15 @@ spec:
         - name: config
           emptyDir: {}        
       initContainers:
-        - name: umount-previous-mount
-          image: rclone/rclone
-          command: ["/bin/fusermount", "-uz" ,"/data"]   
-          securityContext:
-            {{- toYaml .Values.securityContext | nindent 12 }}
-          volumeMounts:
-            - mountPath: /data
-              mountPropagation: Bidirectional
-              name: rclone-data   
+        # - name: umount-previous-mount
+        #   image: rclone/rclone
+        #   command: ["/bin/fusermount", "-uz" ,"/data"]   
+        #   securityContext:
+        #     {{- toYaml .Values.securityContext | nindent 12 }}
+        #   volumeMounts:
+        #     - mountPath: /data
+        #       mountPropagation: Bidirectional
+        #       name: rclone-data   
         - name: {{ .Chart.Name }}-config
           image: "busybox"
           command:
