--- a/charts/rclone/templates/daemonset.yaml
+++ b/charts/rclone/templates/daemonset.yaml
@@ -39,7 +39,16 @@ spec:
                 path: rclone.conf
         - name: config
           emptyDir: {}        
-      initContainers: 
+      initContainers:
+        - name: umount-previous-mount
+          image: rclone/rclone
+          command: ["/bin/fusermount", "-u" ,"/data"]   
+          securityContext:
+            {{- toYaml .Values.securityContext | nindent 12 }}
+          volumeMounts:
+            - mountPath: /data
+              mountPropagation: Bidirectional
+              name: rclone-data    
         - name: {{ .Chart.Name }}-config
           image: "busybox"
           command:
