--- a/charts/filebot-reports/templates/service.yaml
+++ b/charts/filebot-reports/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "filebot.fullname" . }}
+  name: {{ include "filebot-reports.fullname" . }}
   labels:
-    {{- include "filebot.labels" . | nindent 4 }}
+    {{- include "filebot-reports.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "filebot.selectorLabels" . | nindent 4 }}
+    {{- include "filebot-reports.selectorLabels" . | nindent 4 }}
