--- a/charts/filebot-reports/templates/serviceaccount.yaml
+++ b/charts/filebot-reports/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "filebot.serviceAccountName" . }}
+  name: {{ include "filebot-reports.serviceAccountName" . }}
   labels:
-    {{- include "filebot.labels" . | nindent 4 }}
+    {{- include "filebot-reports.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
