--- a/charts/rclone/templates/daemonset.yaml
+++ b/charts/rclone/templates/daemonset.yaml
@@ -28,9 +28,9 @@ spec:
         - name: rclone-data
           hostPath:
             path: {{ .Values.paths.data }}   
-        - name: rclone-cache
-          hostPath:
-            path: {{ .Values.paths.cache }}       
+        # - name: rclone-cache
+        #   hostPath:
+        #     path: {{ .Values.paths.cache }}       
         - name: config-data
           configMap:
             name: rclone-config
@@ -75,17 +75,12 @@ spec:
              "--log-level=INFO",
              "--allow-other",
              "--allow-non-empty",
-             "--drive-chunk-size","64M",
              "--umask","002",
-             "--vfs-cache-mode","full", 
-             "--vfs-read-chunk-size","1G",
-             "--vfs-cache-max-size","500G",
-             "--vfs-cache-max-age","168h",
-             "--dir-cache-time","96h",
-             "--cache-dir","/cache",
+             "--vfs-cache-mode","off", 
              "--tpslimit=7",
              "--bwlimit","8.5M:off",
              ]
+             # "--drive-chunk-size","64M",
             #  "--cache-dir=/tmp/rclone",
             #  "--cache-dir=/mnt/rclone"
             #  "--max-transfer","740G",
@@ -124,9 +119,9 @@ spec:
             - mountPath: /data
               mountPropagation: Bidirectional
               name: rclone-data 
-            - mountPath: /cache
-              mountPropagation: Bidirectional
-              name: rclone-cache 
+            # - mountPath: /cache
+            #   mountPropagation: Bidirectional
+            #   name: rclone-cache 
             - mountPath: /config/rclone
               name: config
       {{- with .Values.nodeSelector }}
