--- a/charts/qbittorrentvpn/values.yaml
+++ b/charts/qbittorrentvpn/values.yaml
@@ -32,7 +32,7 @@ replicaCount: 1
 
 image:
   repository: binhex/arch-qbittorrentvpn
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
 
